# controller/http_controller.go
@@ -30,6 +30,7 @@ func Run() {
 		brc20.POST("/order/push", auth.AuthSignMiddleware(), PushOrder)
 		brc20.POST("/order/ask/push", auth.AuthSignMiddleware(), PushOrder)
 		brc20.GET("/orders", FetchOrders)
+		brc20.GET("/order/:orderId", auth.AuthSignMiddleware(), FetchOneOrder)
 		brc20.GET("/orders/user/:address", FetchUserOrders)
 		brc20.GET("/tickers", FetchTicker)
 		brc20.GET("/kline", FetchKline)
